--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,49 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+
+@import '~bootstrap/scss/bootstrap-reboot';
+@import '~bootstrap/scss/bootstrap-grid';
+
+@include mat.core();
+
+@import './themes/default-theme';
+@import './themes/light-theme';
+@import './themes/black-theme';
+@import './themes/nature-theme';
+@import './google-fonts.scss';
+
+@mixin custom-components-theme-nature($theme) {
+  @include styles-variables-nature($theme);
+}
+
+@mixin custom-components-theme-black($theme) {
+  @include styles-variables-black($theme);
+}
+
+.default-theme {
+  @include mat.all-component-themes($anms-theme);
+}
+
+.light-theme {
+  @include mat.all-component-themes($anms-light-theme);
+}
+
+.black-theme {
+  @include mat.all-component-themes($black-theme);
+  @include custom-components-theme-black($black-theme);
+}
+
+.nature-theme { 
+  @include mat.all-component-themes($nature-theme);
+  @include custom-components-theme-nature($nature-theme);
+  @include google-fonts()
+}
+
+/*
+  font padrão em toda pagina
+*/
+* {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
