--- a/src/app/page/feed/feed.component.html
+++ b/src/app/page/feed/feed.component.html
@@ -1,4 +1,21 @@
 <div class="container">
+  <app-zippy-basic>
+    <p>Let's learn about content projection!</p>
+
+    <p question>
+      Ng-content projection slots
+    </p>
+
+    <!--o conteúdo que você deseja projetar pode ser filho de outro elemento-->
+    <ng-container ngProjectAs="[question]">
+      <p>Is content projection cool?</p>
+    </ng-container>
+  </app-zippy-basic>
+
+
+</div>
+
+<div class="container">
   <div class="row">
     <h1>Feed</h1>
     <div class="col-12 col-md-12 col-lg-12 card-content-center mr-b">
