add components loading e ui-material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,34 +33,17 @@
         <!---->        <mat-icon class="material-icons-round icons-menu">home</mat-icon>
         <!---->        <span class="texts-menu">Login</span>
         <!---->    </button>
-        <!---->
-        <!-- 
-                    <button routerLink="home" routerLinkActive="active" mat-button class="menu-button button-menu">
-                        <mat-icon class="material-icons-round icons-menu">home</mat-icon>
-                        <span class="texts-menu">Home</span>
-                    </button>
-                    
-                    <button routerLink="detail" routerLinkActive="active" mat-button class="menu-button button-menu">
-                        <mat-icon class="material-icons-round icons-menu">home</mat-icon>
-                        <span class="texts-menu">Detail</span>
-                    </button>
-                    
-                    <button routerLink="edit" routerLinkActive="active" mat-button class="menu-button button-menu">
-                        <mat-icon class="material-icons-round icons-menu">home</mat-icon>
-                        <span class="texts-menu">Edit</span>
-                    </button>
-                    
-                    <button routerLink="list" routerLinkActive="active" mat-button class="menu-button button-menu">
-                        <mat-icon class="material-icons-round icons-menu">home</mat-icon>
-                        <span class="texts-menu">List</span>
-                    </button>
-                    
-                    <button routerLink="create" routerLinkActive="active" mat-button class="menu-button button-menu">
-                        <mat-icon class="material-icons-round icons-menu">home</mat-icon>
-                        <span class="texts-menu">Create</span>
-                    </button>
-        -->
         <!---->       
+        <!---->    <button routerLink="components" routerLinkActive="active" (click)="sideNavClose()" mat-button class="menu-button button-menu">
+        <!---->        <mat-icon class="material-icons-round icons-menu">home</mat-icon>
+        <!---->        <span class="texts-menu">Components</span>
+        <!---->    </button>
+        <!---->       
+        <!---->    <button routerLink="loading" routerLinkActive="active" (click)="sideNavClose()" mat-button class="menu-button button-menu">
+        <!---->        <mat-icon class="material-icons-round icons-menu">home</mat-icon>
+        <!---->        <span class="texts-menu">Loading</span>
+        <!---->    </button>
+        <!---->  
         <!---->    <button routerLink="tutorial" routerLinkActive="active" (click)="sideNavClose()" mat-button class="menu-button button-menu">
         <!---->        <mat-icon class="material-icons-round icons-menu">home</mat-icon>
         <!---->        <span class="texts-menu">Tutorial</span>
