--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,11 @@
         <!---->        <span class="texts-menu">Components</span>
         <!---->    </button>
         <!---->       
+        <!---->    <button routerLink="learn-angular" routerLinkActive="active" (click)="sideNavClose()" mat-button class="menu-button button-menu">
+        <!---->        <mat-icon class="material-icons-round icons-menu">home</mat-icon>
+        <!---->        <span class="texts-menu">Learn Angular</span>
+        <!---->    </button>
+        <!---->       
         <!---->    <button routerLink="loading" routerLinkActive="active" (click)="sideNavClose()" mat-button class="menu-button button-menu">
         <!---->        <mat-icon class="material-icons-round icons-menu">home</mat-icon>
         <!---->        <span class="texts-menu">Loading</span>
